Fixed Date
Date was returning too much extra info. Fixed that and then broke up the date and time onto two lines.

--- a/src/style.css
+++ b/src/style.css
@@ -95,6 +95,15 @@ li {
   color: #000;
   text-transform: capitalize;
 }
+
+.currentDate, .weather-description{
+  font-size: 20px;
+}
+
+.weather-description{
+  font-size: 18px;
+} 
+
 .unit{
   font-size: 30px;
 }
